Entrypoint can be configured now
Signed-off-by: Gergely Czuczy <gergely.czuczy@sap.com>

--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -132,6 +132,14 @@ global:
     #   topologyKey: topology.kubernetes.io/zone
     #   whenUnsatisfiable: DoNotSchedule
 
+  # POD entrypoint configuration
+  entrypoint:
+    # -- Implicitly use the docker image's entrypoint. This requires the image to have
+    # ENTRYPOINT set properly
+    useImplicit: false
+    # -- The entrypoint to use for the containers.
+    entrypoint: "entrypoint.sh"
+
 
 ## Argo Configs
 configs:
