--- a/charts/argo-cd/templates/argocd-repo-server/deployment.yaml
+++ b/charts/argo-cd/templates/argocd-repo-server/deployment.yaml
@@ -56,8 +56,10 @@ spec:
       - name: {{ .Values.repoServer.name }}
         image: {{ default .Values.global.image.repository .Values.repoServer.image.repository }}:{{ default (include "argo-cd.defaultTag" .) .Values.repoServer.image.tag }}
         imagePullPolicy: {{ default .Values.global.image.imagePullPolicy .Values.repoServer.image.imagePullPolicy }}
+        {{- if not .Values.global.entrypoint.useImplicit }}
         command:
-        - entrypoint.sh
+          - {{ .Values.global.entrypoint.entrypoint | quote }}
+        {{- end }}
         args:
         - argocd-repo-server
         - --port={{ .Values.repoServer.containerPorts.server }}
