--- a/charts/argo-cd/templates/argocd-applicationset/deployment.yaml
+++ b/charts/argo-cd/templates/argocd-applicationset/deployment.yaml
@@ -205,7 +205,7 @@ spec:
       affinity:
         {{- trim . | nindent 8 }}
       {{- end }}
-      {{- with .Values.applicationSet.nodeSelector }}
+      {{- with .Values.applicationSet.nodeSelector | default .Values.global.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
       {{- end }}
