chore(argo-workflows): Add install guide on README Signed-off-by: yu-croco <yu.croco@gmail.com>

--- a/charts/argo-workflows/Chart.yaml
+++ b/charts/argo-workflows/Chart.yaml
@@ -3,7 +3,7 @@ appVersion: v3.4.5
 name: argo-workflows
 description: A Helm chart for Argo Workflows
 type: application
-version: 0.22.13
+version: 0.22.14
 icon: https://raw.githubusercontent.com/argoproj/argo-workflows/master/docs/assets/argo.png
 home: https://github.com/argoproj/argo-helm
 sources:
@@ -14,10 +14,4 @@ maintainers:
 annotations:
   artifacthub.io/changes: |
     - kind: added
-      description: Added workflow startup option --log-format (defaults to 'text').
-    - kind: added
-      description: Added server startup option --log-format (defaults to 'text').
-    - kind: added
-      description: Added server startup option --loglevel (defaults to 'info').
-    - kind: added
-      description: Added server startup option --gloglevel (defaults to '0').
+      description: Add install guide on README.
