feat(argo-cd): Add ability to add project scoped cluster(s)
Signed-off-by: Marco Kilchhofer <mkilchhofer@users.noreply.github.com>

--- a/charts/argo-cd/templates/argocd-configs/cluster-secrets.yaml
+++ b/charts/argo-cd/templates/argocd-configs/cluster-secrets.yaml
@@ -26,6 +26,9 @@ stringData:
   clusterResources: {{ .clusterResources | quote }}
     {{- end }}
   {{- end }}
+  {{- if .project }}
+  project: {{ .project | quote }}
+  {{- end }}
   config: |
     {{- required "A valid .Values.configs.clusterCredentials[].config entry is required!" .config | toRawJson | nindent 4 }}
 {{- end }}
