--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -379,6 +379,7 @@ configs:
   ## Ref:
   ## - https://argo-cd.readthedocs.io/en/stable/operator-manual/declarative-setup/#clusters
   ## - https://argo-cd.readthedocs.io/en/stable/operator-manual/security/#external-cluster-credentials
+  ## - https://argo-cd.readthedocs.io/en/stable/user-guide/projects/#project-scoped-repositories-and-clusters
   clusterCredentials: []
     # - name: mycluster
     #   server: https://mycluster.com
@@ -395,6 +396,16 @@ configs:
     #   annotations: {}
     #   namespaces: namespace1,namespace2
     #   clusterResources: true
+    #   config:
+    #     bearerToken: "<authentication token>"
+    #     tlsClientConfig:
+    #       insecure: false
+    #       caData: "<base64 encoded certificate>"
+    # - name: mycluster3-project-scoped
+    #   server: https://mycluster3.com
+    #   labels: {}
+    #   annotations: {}
+    #   project: my-project1
     #   config:
     #     bearerToken: "<authentication token>"
     #     tlsClientConfig:
