--- a/artifacthub-repo.yml
+++ b/artifacthub-repo.yml
@@ -1,6 +1,5 @@
 # Artifact Hub repository metadata file
 repositoryID: 05f5fe20-d21b-4413-8327-715958b51bde
 owners:
-- name: jessesuen
-  email: jessesuen@gmail.com
-
+- name: jmeridth
+  email: jmeridth@gmail.com
