--- a/charts/argo-workflows/templates/server/server-deployment-hpa.yaml
+++ b/charts/argo-workflows/templates/server/server-deployment-hpa.yaml
@@ -1,5 +1,5 @@
 {{- if and .Values.server.enabled .Values.server.autoscaling.enabled }}
-apiVersion: autoscaling/v2beta1
+apiVersion: {{ include "argo-workflows.apiVersion.autoscaling" . }}
 kind: HorizontalPodAutoscaler
 metadata:
   name: {{ template "argo-workflows.server.fullname" . }}
