--- a/charts/argo-workflows/Chart.yaml
+++ b/charts/argo-workflows/Chart.yaml
@@ -13,5 +13,5 @@ maintainers:
     url: https://argoproj.github.io/
 annotations:
   artifacthub.io/changes: |
-    - kind: fix
+    - kind: fixed
       description: Fix Helm chart to correctly reference Kubernetes version in conditional check for HPA apiVersion
