Add artifacthub changes
Signed-off-by: Peejai <pieterjan.soetaert@robovision.eu>

--- a/charts/argo-workflows/Chart.yaml
+++ b/charts/argo-workflows/Chart.yaml
@@ -14,4 +14,4 @@ maintainers:
 annotations:
   artifacthub.io/changes: |
     - kind: fixed
-      description: Fix Helm chart to correctly reference Kubernetes version in conditional check for HPA apiVersion
+      description: Fix Helm templating in S3 config and extra init containers
