--- a/charts/argo-cd/templates/argocd-repo-server/deployment.yaml
+++ b/charts/argo-cd/templates/argocd-repo-server/deployment.yaml
@@ -273,9 +273,9 @@ spec:
           failureThreshold: {{ .Values.repoServer.readinessProbe.failureThreshold }}
         resources:
           {{- toYaml .Values.repoServer.resources | nindent 10 }}
-        {{- if .Values.repoServer.containerSecurityContext.enabled }}
+        {{- if .Values.repoServer.containerSecurityContext }}
         securityContext:
-          {{- omit .Values.repoServer.containerSecurityContext "enabled" | toYaml | nindent 10 }}
+          {{- toYaml . | nindent 10 }}
         {{- end }}
         {{- with .Values.repoServer.lifecycle }}
         lifecycle:
@@ -297,11 +297,9 @@ spec:
         resources:
           {{- toYaml . | nindent 10 }}
         {{- end }}
-        {{- if .Values.repoServer.containerSecurityContext.enabled }}
         {{- with .Values.repoServer.containerSecurityContext }}
         securityContext:
-          {{- omit . "enabled" | toYaml | nindent 10 }}
-        {{- end }}
+          {{- toYaml . | nindent 10 }}
         {{- end }}
         volumeMounts:
         - mountPath: /var/run/argocd
