chore(argo-workflows): upgrade argo workflows to v3.4.8
https://github.com/argoproj/argo-workflows/releases/tag/v3.4.8

includes this PR upstream

- [x]  https://github.com/argoproj/argo-workflows/pull/10984

Signed-off-by: jmeridth <jmeridth@gmail.com>

--- a/charts/argo-workflows/Chart.yaml
+++ b/charts/argo-workflows/Chart.yaml
@@ -1,9 +1,9 @@
 apiVersion: v2
-appVersion: v3.4.7
+appVersion: v3.4.8
 name: argo-workflows
 description: A Helm chart for Argo Workflows
 type: application
-version: 0.28.1
+version: 0.28.2
 icon: https://argoproj.github.io/argo-workflows/assets/logo.png
 home: https://github.com/argoproj/argo-helm
 sources:
@@ -17,4 +17,4 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: changed
-      description: Enable to configure Service Monitor port
+      description: Upgrade to Argo Workflows v3.4.8
