--- a/charts/argo-rollouts/templates/dashboard/clusterrole.yaml
+++ b/charts/argo-rollouts/templates/dashboard/clusterrole.yaml
@@ -72,6 +72,12 @@ rules:
       - list
       - watch
   - apiGroups:
+      - ""
+    resources:
+      - configmaps
+    verbs:
+      - get
+  - apiGroups:
       - coordination.k8s.io
     resources:
       - leases
