fix(argocd): Use ingress crt for dex when enabled
Fixes: https://github.com/argoproj/argo-helm/issues/2171

Signed-off-by: Elad Shmitanka <elad@myheritage.com>

--- a/charts/argo-cd/templates/argocd-server/deployment.yaml
+++ b/charts/argo-cd/templates/argocd-server/deployment.yaml
@@ -423,7 +423,11 @@ spec:
             path: ca.crt
       - name: argocd-dex-server-tls
         secret:
+          {{- if .Values.server.certificate.enabled -}}
+          secretName: {{ .Values.server.certificate.secretName }}
+          {{- else -}}
           secretName: argocd-dex-server-tls
+          {{- end }}
           optional: true
           items:
           - key: tls.crt
