--- a/charts/argo-cd/templates/argocd-server/deployment.yaml
+++ b/charts/argo-cd/templates/argocd-server/deployment.yaml
@@ -425,7 +425,7 @@ spec:
         secret:
           {{- if .Values.server.certificate.enabled -}}
           secretName: {{ .Values.server.certificate.secretName }}
-          {{- else -}}
+          {{- else }}
           secretName: argocd-dex-server-tls
           {{- end }}
           optional: true
