fix(argo-rollouts): Use annotation cont metrics
Signed-off-by: Artur Mudrykh <a.mudrykh@uzum.com>

--- a/charts/argo-rollouts/values.yaml
+++ b/charts/argo-rollouts/values.yaml
@@ -127,6 +127,8 @@ controller:
       portName: metrics
       # -- Metrics service port
       port: 8090
+      # -- Service annotations
+      annotations: {}
     serviceMonitor:
       # -- Enable a prometheus ServiceMonitor
       enabled: false
