--- a/charts/argo-rollouts/Chart.yaml
+++ b/charts/argo-rollouts/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 appVersion: v1.5.1
 description: A Helm chart for Argo Rollouts
 name: argo-rollouts
-version: 2.31.1
+version: 2.31.2
 home: https://github.com/argoproj/argo-helm
 icon: https://argoproj.github.io/argo-rollouts/assets/logo.png
 keywords:
@@ -20,3 +20,5 @@ annotations:
   artifacthub.io/changes: |
     - kind: changed
       description: Update to app version 1.5.1
+    - kind: fixed
+      description: Fix use prometheus metrics service
