--- a/charts/argo-workflows/Chart.yaml
+++ b/charts/argo-workflows/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-appVersion: v3.4.9
+appVersion: v3.4.10
 name: argo-workflows
 description: A Helm chart for Argo Workflows
 type: application
@@ -16,5 +16,7 @@ annotations:
     fingerprint: 2B8F22F57260EFA67BE1C5824B11F800CD9D2252
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
+    - kind: added
+      description: Add support for overriding server livenessProbe, readinessProbe
     - kind: added
       description: Add support for executor args
